[tool.poetry]
name = "tum-p2p-dht"
version = "1.0.0"
description = "P2P Implementation of a DHT based on Chord"
authors = ["Mohamed Elzarei", "Hady Yasser"]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.1"
aiomas = "^2.0.1"
nest_asyncio = "^1.4.0"
bitarray = "^1.5.3"
diskcache = "^5.0.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"
flake8 = "^3.8.3"
sphinx = "^3.2.1"
recommonmark = "^0.6.0"

[tool.black]
line-length = 110
